Jan 21 2003  3.1.0  Fixed embarassingly stupid bug in panels probe/data
                     autogroup, minor efficiency improvements as well
                    Removed debug printing on corrupt dronesource packets
                    Made probed networks clients of themselves
                    Minor speed update to packet tracking
                    Added setgid to setuid privdropping, leaving us as gid0 is
                     also bad.
Jan 17 2003  3.1.0  Tweaked empty SSID assignment (again)
                    Forced wext-fetched signal levels to abs values
                    Fixed initialization of client sort value in panels
                    Moved group updates into population code in panels
                    Added --gui long-option to kismet_client
Jan 16 2003  3.1.0  Fixed offset mangling in probe request parsing
Jan 15 2003  3.1.0  Fixed data network autogrouping
                    Fixed panels client segfault when viewing details on a 
                     network absorbed into an autogroup
                    Fixed bug where single-packet new networks sometimes showed
                     up as having no packets in panels client
Jan 13 2003  3.1.0  Added more packet sanitizing.  Most invalid management
                     frames now intercepted, data frames still problematic.
                    Merged gpsmap patches from Andrew Knutsen to add labeling
                     of manufacturer and beacon info, avoid overlapping network
                     labels, and scripts in the extras directory to generate
                     multiple maps of an area and to merge the IEEE 
                     manufacturer list into the Kismet manuf file.
                    Tweaked mac_map to separate insert and fast_insert
                    Added autogrouping data-only networks
                    Added validation checks before calling Packetsource::Close,
                     fixes segfault for invalid pcapfile opens